# chirrp

./: README.md  docker-compose.yml
chirrp-backend/: .env.example  .ruff.toml  Dockerfile  pyproject.toml
chirrp-backend/app/: main.py
chirrp-backend/app/api/: deps.py  errors.py
chirrp-backend/app/api/v1/: auth.py  comments.py  follows.py  health.py  posts.py  router.py  users.py
chirrp-backend/app/core/: config.py  logging.py  security.py
chirrp-backend/app/db/: session.py
chirrp-backend/app/models/: comment.py  follow.py  post.py  post_event.py  user.py
chirrp-backend/app/schemas/: auth.py  base.py  comment.py  common.py  follow.py  post.py  user.py
chirrp-backend/app/services/: comment_tree.py  post_events.py
chirrp-backend/migrations/: env.py
chirrp-backend/migrations/versions/: 233e6e44d29e_added_follow_and_social_graph_events_.py  2fbef2f88aec_add_post_events_models_and_relationships.py  562ca30cfb1c_add_updated_at_to_users_for_consistency.py  b9bb22f01489_added_users_crud_and_simple_auth.py  c7372482f7db_added_follow_and_social_graph_events_.py  f275de868bbc_initial_migration.py
chirrp-backend/scripts/: seed.py
chirrp-backend/tests/: test_comments.py  test_health.py  test_posts.py
